change list sequence

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
         </head>
 
         <body>
-            <h1>
-                <a>
-                    <href>../recipes/casserole.html</href>
-                </a>
-            </h1>
+            <h1>Odin Recipes</h1>
+            <a href="recipes/casserole.html">casserole</a>
         </body>
 </html>
