add paragragh and switches list type

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -1,6 +1,12 @@
 <h1>This Amazing Casserole Recipe</h1>
-<img src="../recipes/images/chicken-and-rice-casserole.jpg" width="150">
+<img src="../recipes/images/chicken-and-rice-casserole.jpg" width="150" alt="a cheesy chicken and rice casserole missing a slice in the bottom right corner of the dish">
 
 <p>
     <h3>Hello and welcome to my first website all about food recipes im excited to start this journey</h3>
-</p><p><ol>Chicken Rice casserole</ol>This dish includes Chicken,rice,broccoli and cheese! </p>
+</p><p>Chicken Rice casserole</p><p>1st i have to go with a my mothers <em>best dish!</em> ever since a child I loved this dish and its amazing that i can make this website</p>This dish includes: <ol>
+    <li>Chicken</li>
+    <li>Rice</li>
+    <li>Broccoli</li> 
+    <li>Cheese</li>
+</ol>
+</p>
