--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -3,10 +3,23 @@
 
 <p>
     <h3>Hello and welcome to my first website all about food recipes im excited to start this journey</h3>
-</p><p>Chicken Rice casserole</p><p>1st i have to go with a my mothers <em>best dish!</em> ever since a child I loved this dish and its amazing that i can make this website</p>This dish includes: <ol>
+</p><p>Chicken Rice casserole</p><p>1st i have to go with a my mothers <em>best dish!</em> ever since a child I loved this dish and its amazing that i can make this website</p>This dish includes: <ul>
     <li>Chicken</li>
     <li>Rice</li>
     <li>Broccoli</li> 
     <li>Cheese</li>
-</ol>
+</ul>
+</p>
+<p>
+    <h3>Steps</h3>
+</p>
+<p>
+    <ol>
+        <li>
+            Preheat the oven to 350 degrees F (175 degrees C)
+        </li>
+        <li>Bring water to a boil in a medium saucepan; stir in instant rice, cover, and remove from heat. Let stand for 5 minutes.</li>
+        <li>Mix prepared rice, chicken, broccoli, processed cheese, condensed mushroom soup, condensed chicken soup, milk, butter, and onion in a 9x13-inch baking dish.</li>
+        <li>Bake in the preheated oven until cheese is melted, about 30 to 35 minutes. Stir halfway through cooking to help cheese melt evenly.</li>
+    </ol>
 </p>
